syntax = "proto3";

package erogen;

option go_package = "user";

import "google/protobuf/timestamp.proto";

service UserService {
    // unauthenticated requests
    rpc Login(LoginRequest) returns (LoginResponse) {};
    rpc Register(RegisterRequest) returns (RegisterResponse) {};
    rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {};
    rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {};
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {};

    // authenticated write requests
    rpc ChangeEmail(ChangeEmailRequest) returns (ChangeEmailResponse) {};
    rpc ChangeUsername(ChangeUsernameRequest) returns (ChangeUsernameResponse) {};
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {};
    rpc VerifySecurityQA(VerifySecurityQARequest) returns (VerifySecurityQAResponse) {};
    rpc Update(UpdateRequest) returns (UpdateResponse) {};
    rpc Delete(DeleteRequest) returns (UpdateResponse) {};

    // authenticated read requests
    rpc User(UserRequest) returns (UserResponse) {};
    rpc Users(UsersRequest) returns (stream UserResponse) {};
}

message LoginRequest {
    string alias = 1;
    UserAliasType alias_type = 2;
    string password = 3;
    bool remember = 4;
    uint32 remember_for = 5;
    bool include_tokens = 6;
}

message LoginResponse {
    bool success = 1;
    TokenPayload payload = 2;

    message TokenPayload {
        string id_token = 1;
        string access_token = 2;
        string refresh_token = 3;
        string token_type = 4;
        string scope = 5;
        int32 expires_in = 6;
    }
}

message RegisterRequest {
    string username = 1;
    string email_address = 2;
    string password = 3;
    string accepted_tos_version = 4;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}

message ChangeEmailRequest {
    string id = 1;
    string current_email = 2;
    string new_email = 3;
}

message ChangeEmailResponse {
    bool success = 1;
    string message = 2;
}

message ChangeUsernameRequest {
    string id = 1;
    string current_username = 2;
    string new_username = 3;
}

message ChangeUsernameResponse {
    bool success = 1;
    string message = 2;
}

message ChangePasswordRequest {
    string id = 1;
    string current_password = 2;
    string new_password = 3;
}

message ChangePasswordResponse {
    bool success = 1;
    string message = 2;
}

message ForgotPasswordRequest {
    string email_address = 1;
}

message ForgotPasswordResponse {
    bool user_exists = 1;
    bool sendemail_queued = 2;
}

message ResetPasswordRequest {
    string user_id = 1;
    string new_password = 2;
}

message ResetPasswordResponse {
    bool success = 1;
    string message = 2;
}

message ValidateTokenRequest {
    string token = 1;
    Scope scope = 2;

    enum Scope {
        EMAIL_VERIFICATION = 1;
        PASSWORD_RESET = 2;
    }
}

message ValidateTokenResponse {
    bool success = 1;
}

message VerifySecurityQARequest {
    string answer = 1;
}

message VerifySecurityQAResponse {
    bool success = 1;
}

message UpdateRequest {
    User user = 1;
}

message UpdateResponse {
    bool success = 1;
    User user = 2;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    bool success = 1;
}

message UserRequest {
    string id = 1;
    bool include_account = 2;
    bool include_login = 3;
}

message UserResponse {
    User user = 1;
}

message UsersRequest {
    string filter = 1;
    uint32 count = 2;
    uint32 offset = 3;
}

enum UserAliasType {
    UNKNOWN = 0;
    USERNAME = 1;
    EMAIL_ADDRESS = 2;
    MOBILE_NUMBER = 3;
}

message User {
    string id = 1;
    UserLogin login = 2;
    UserAccount account = 3;
    UserProfile profile = 4;
}

message UserLogin {
    string user_id = 1;
    string user_username = 2;
    string user_email = 3;

    string password_hash = 4;
    string verification_token_email = 5;
    string verification_token_password = 6;
    
    SecurityQuestion security_question = 7;
    string security_answer = 8;
}

message UserProfile {
    string title = 1;
    string given_name = 2;
    string middle_name = 3;
    string family_name = 4;
    string preferred_name = 5;

    string birthdate = 6;
    string gender = 7;
    string occupation = 8;

    string profile_pic_url = 9;
    string banner_pic_url = 10;
    string bio_description = 11;
    string website_link = 12;
    SocialLinks social_links = 13;

    message SocialLinks {
        string google = 1;
        string linkedin = 2;
        string twitter = 3;
        string facebook = 4;
        string instagram = 5;
    }
}

message UserAccount {
    string user_id = 1;
    string username = 2;
    string email = 3;
    MobileNumber mobile = 4;
    PaymentMethod payment_method = 5;

    AccountStatus status = 6;
    AccountFlag flag = 7;

    bool mfa_enabled = 8;

    string accepted_tos_version = 9;
    uint32 accepted_tos_version_id = 10;


    string last_known_ip = 16;

    string last_known_device = 17;

    string last_known_geolocation = 18;

    repeated string previous_ips = 19;

    repeated string trusted_devices = 20;

    uint32 failed_login_attempts = 21;

    google.protobuf.Timestamp last_login_at = 22;

    google.protobuf.Timestamp lockout_timestamp = 23;

    string admin_notes = 8;

    google.protobuf.Timestamp created_at = 24;

    string created_by = 25;

    google.protobuf.Timestamp updated_at = 26;

    string updated_by = 27;

    google.protobuf.Timestamp deleted_at = 28;

    string deleted_by = 29;

    message MobileNumber {
    }
    message PaymentMethod {}
}

message AccountFlag {
    uint32 id = 1;
    string name = 2;
    string label = 3;
    string description = 4;
    uint32 severity = 5;
}

message AccountStatus {
    uint32 id = 1;
    string name = 2;
    string label = 3;
    string description = 4;
    bool is_active_mode = 5;
}

message AccountPrivacyLevel {
    uint32 id = 1;
    string name = 2;
    string label = 3;
    bool ext_visible_profile = 4;
    bool int_visible_profile = 5;
    bool ext_searchable_username = 6;
    bool int_searchable_username = 7;
    bool ext_searchable_email = 8;
    bool int_searchable_email = 9;
}

message SecurityQuestion {
    uint32 id = 1;
    string display_text = 2;
    bool currently_active = 3;
}

message SubscriptionPlan {
    uint32 id = 1;
    string name = 2;
    string label = 3;
    string description = 4;
    uint32 price_per_week = 5;
    uint32 price_per_month = 6;
    uint32 price_per_year = 7;
    uint32 max_discount_percent = 8;
    repeated SubscriptionFeature base_features = 9;
    repeated SubscriptionFeature inherited_features = 10;
    uint32 parent_plan_id = 11;
    bool currently_active = 12;
}

message SubscriptionFeature {
    uint32 id = 1;
    string name = 2;
    string label = 3;
    string description = 4;
    bool currently_active = 5;
}